--- a/addons/point_of_sale/static/src/app/components/accordion_item/accordion_item.scss
+++ b/addons/point_of_sale/static/src/app/components/accordion_item/accordion_item.scss
@@ -22,7 +22,7 @@
 
         &:before {
             content: "\f0d7";
-            font-family: "Font Awesome 7 Free";
+            font-family: "Font Awesome 7 Pro";
             font-weight: 900;
             display: inline-block;
 
