--- a/addons/project/static/src/scss/project_dashboard.scss
+++ b/addons/project/static/src/scss/project_dashboard.scss
@@ -44,7 +44,7 @@
 
                     &:after {
                         content: "\f086";
-                        font: normal 900 14px/1 "Font Awesome 7 Free";
+                        font: normal 900 14px/1 "Font Awesome 7 Pro";
                     }
                 }
             }
