--- a/addons/web/static/src/components/dropdown/dropdown.scss
+++ b/addons/web/static/src/components/dropdown/dropdown.scss
@@ -41,7 +41,7 @@
 
         &:after {
             content: "\f0d7";
-            font-family: "Font Awesome 7 Free";
+            font-family: "Font Awesome 7 Pro";
             font-weight: 900;
             display: inline-block;
             margin-left: auto;
