--- a/addons/website/static/src/components/dialog/seo.scss
+++ b/addons/website/static/src/components/dialog/seo.scss
@@ -47,7 +47,7 @@
                     @include o-position-absolute(2px, 3px);
                     display: inline-block;
                     content: "\f00c";
-                    font-family: "Font Awesome 7 Free";
+                    font-family: "Font Awesome 7 Pro";
                     font-weight: 900;
                     color: white;
                     font-size: 12px;
