--- a/addons/website/static/src/scss/website.editor.ui.scss
+++ b/addons/website/static/src/scss/website.editor.ui.scss
@@ -24,7 +24,7 @@ $o-we-switch-inactive-color: rgba($text-muted, 0.4) !default;
 
             &:after {
                 content: "\f057"; // fa-times-circle
-                font-family: "Font Awesome 7 Free";
+                font-family: "Font Awesome 7 Pro";
                 font-weight: 900;
                 color: white;
                 transition: all 0.2s cubic-bezier(0.19, 1, 0.22, 1);
