--- a/addons/website/static/src/scss/website.scss
+++ b/addons/website/static/src/scss/website.scss
@@ -646,7 +646,7 @@ font[class*='bg-'] {
 .fa {
     $-size: map-get($spacers, 5);
 
-    font-family: "Font Awesome 7 Free" !important;
+    font-family: "Font Awesome 7 Pro" !important;
     font-weight: 900 !important;
 
     &.rounded-circle,
@@ -987,7 +987,7 @@ $-o-carousel-controllers-size: var(--CarouselControllers-size, #{map-get($spacer
         background-image: none;
         color: $body-color;
         &:before {
-            font-family: "Font Awesome 7 Free";
+            font-family: "Font Awesome 7 Pro";
             font-weight: 900;
             display: inline-block;
             background-color: #fff;
