--- a/addons/website/static/src/snippets/s_faq_collapse/000.scss
+++ b/addons/website/static/src/snippets/s_faq_collapse/000.scss
@@ -11,7 +11,7 @@
             outline: none;
             &:before {
                 content: '\f056';
-                font-family: "Font Awesome 7 Free";
+                font-family: "Font Awesome 7 Pro";
                 font-weight: 900;
                 color: $gray-600;
                 position: absolute;
